# wayland-window

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
cmake/: FindWayland.cmake
src/: CMakeLists.txt  main.cpp
