cmake_minimum_required(VERSION 3.28)

# Enable policy to make vcpkg copy dll/so to build directory
cmake_policy(SET CMP0087 NEW)

# include logic to build glsl files
# include(cmake/glsl_compiler.cmake)

# project and language to be used
project(vulkan-framework
	LANGUAGES CXX
	HOMEPAGE_URL "https://roy-fokker.github.io/vulkan-framework/"
	DESCRIPTION "C++23 based Project Template.")

# Enable scan for dependencies
set(CXX_SCAN_FOR_MODULES ON)
# disable C++ extensions
set(CMAKE_CXX_EXTENSIONS OFF)
# force C++ version to 23
set(CMAKE_CXX_STANDARD 23)
# standard is required
set(CXX_STANDARD_REQUIRED ON)

# executable source folder
add_subdirectory(src)